<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainPage_yearwise_recyclerViewFrag">


    <RelativeLayout
        android:id="@+id/mainPage_frag_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginBottom="2dp"
        >


        <TextView
            android:id="@+id/list_item_year_charges_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_text"
            style="@style/MyParentTextStyle"
            android:textSize="18dp"
            android:layout_toLeftOf="@+id/list_item_year_received_text"
            android:textColor="@android:color/holo_blue_dark"
            />



        <TextView
            android:id="@+id/list_item_year_received_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/received_text"
            style="@style/MyParentTextStyle"
            android:textSize="18dp"
            android:layout_toLeftOf="@+id/list_item_year_sent_text"
            android:textColor="@color/greenColor"
            />



        <TextView
            android:id="@+id/list_item_year_sent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_text"
            style="@style/MyParentTextStyle"
            android:textSize="18dp"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/holo_red_dark"
            />

    </RelativeLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/mainPage_yearwise_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mainPage_frag_header"/>

</RelativeLayout>